Change error model to friendly error model
