# cmd/controllers/orderController.go
@@ -5,6 +5,7 @@ import (
 	"net/http"
 	"simple-order-api/cmd/constants"
 	"simple-order-api/cmd/helpers"
+	"simple-order-api/cmd/models/response"
 	"simple-order-api/cmd/services"
 )
 
@@ -24,7 +25,7 @@ func NewOrderController(
 // @Description Get Orders
 // @Produce json
 // @Success 200 {object} []response.Order
-// @Failure 500 {object} error
+// @Failure 500 {object} response.ErrorResponse
 // @Router /orders [get]
 func (controller *OrderController) GetOrders() func(context *gin.Context) {
 	return func(context *gin.Context) {
@@ -42,16 +43,19 @@ func (controller *OrderController) GetOrders() func(context *gin.Context) {
 // @Description Get Order By OrderNumber
 // @Produce json
 // @Success 200 {object} response.Order
-// @Failure 400 {object} string
-// @Failure 404 {object} string
-// @Failure 500 {object} error
+// @Failure 400 {object} response.ErrorResponse
+// @Failure 404 {object} response.ErrorResponse
+// @Failure 500 {object} response.ErrorResponse
 // @Router /orders/{orderNumber} [get]
 // @Param orderNumber path string true "orderNumber"
 func (controller *OrderController) GetOrderByOrderNumber() func(context *gin.Context) {
 	return func(context *gin.Context) {
 		orderNumber, orderNumberErr := GetStringParam(context, constants.OrderNumber)
 		if !helpers.IsValidString(orderNumber, orderNumberErr) {
-			context.JSON(http.StatusBadRequest, constants.OrderNumberIsNotValid)
+			errorResponse := response.NewErrorBuilder().
+				SetError(http.StatusBadRequest, constants.OrderNumberIsNotValid).
+				Build()
+			context.JSON(errorResponse.StatusCode, errorResponse)
 			return
 		}
 
@@ -62,7 +66,10 @@ func (controller *OrderController) GetOrderByOrderNumber() func(context *gin.Con
 		}
 
 		if order == nil {
-			context.JSON(http.StatusNotFound, constants.OrderNotFoundByOrderNumber)
+			errorResponse := response.NewErrorBuilder().
+				SetError(http.StatusNotFound, constants.OrderNotFoundByOrderNumber).
+				Build()
+			context.JSON(errorResponse.StatusCode, errorResponse)
 			return
 		}
 
@@ -70,7 +77,38 @@ func (controller *OrderController) GetOrderByOrderNumber() func(context *gin.Con
 	}
 }
 
+// @Tags OrderController
+// @Description Delete Order
+// @Produce json
+// @Success 204
+// @Failure 400 {object} response.ErrorResponse
+// @Failure 404 {object} response.ErrorResponse
+// @Failure 500 {object} response.ErrorResponse
+// @Router /orders/{orderNumber} [delete]
+// @Param orderNumber path string true "orderNumber"
+func (controller *OrderController) DeleteOrder() func(context *gin.Context) {
+	return func(context *gin.Context) {
+		orderNumber, orderNumberErr := GetStringParam(context, constants.OrderNumber)
+		if !helpers.IsValidString(orderNumber, orderNumberErr) {
+			errorResponse := response.NewErrorBuilder().
+				SetError(http.StatusBadRequest, constants.OrderNumberIsNotValid).
+				Build()
+			context.JSON(errorResponse.StatusCode, errorResponse)
+			return
+		}
+
+		deleteErr := controller.orderService.DeleteOrder(orderNumber)
+		if deleteErr != nil {
+			context.JSON(deleteErr.StatusCode, deleteErr)
+			return
+		}
+
+		context.JSON(http.StatusNoContent, "")
+	}
+}
+
 func (controller *OrderController) Register(engine *gin.Engine) {
 	engine.GET("/orders", controller.GetOrders())
 	engine.GET("/orders/:orderNumber", controller.GetOrderByOrderNumber())
+	engine.DELETE("/orders/:orderNumber", controller.DeleteOrder())
 }
